@@ -15,6 +15,7 @@ Copyright (c) 2005-2020 Alon Bar-Lev <alon.barlev@gmail.com>
  * core: add pkcs11h_initializeProvider, pkcs11h_registerProvider,
    pkcs11h_setProviderProperty, pkcs11h_setProviderPropertyByName to
    support adding properties without breaking API thanks to Михалицын Петр.
+ * core: add initialization arguments property, thanks for Михалицын Петр.
 
 2020-11-17 - Version 1.27
 
